cluster-metal/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: http-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: shamrock
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: http-gateway-default-tls
